--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mantine/charts": "^7.16.2",
     "@mantine/core": "^7.16.2",
     "@mantine/hooks": "^7.16.2",
+    "@mui/material": "^7.0.1",
+    "@mui/x-charts": "^7.28.0",
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
     "http-server": "^14.1.1",
